# LogicChart

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  NOTICE  PRODUCT_VISION.md  PROJECT_FINDINGS.md  README.md  pyproject.toml
.cursor/rules/: logicchart.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  usage_question.yml
codedebrief-out/: codedebrief.hash.json  codedebrief.md
docs/: index.html  llm.md  multi-language-and-scale.md  project-definition.md  viewer.md
examples/demo/: README.md  logicchart.toml
examples/demo/backend/: users.py
examples/demo/backend/auth/: AuthService.cs
examples/demo/backend/billing/: BillingService.java
examples/demo/backend/cache/: cache.c
examples/demo/backend/catalog/: Catalog.php
examples/demo/backend/native/: admission.cpp  policy.cpp
examples/demo/backend/notifications/: notifier.rb
examples/demo/backend/orders/: service.go
examples/demo/backend/router/: Cargo.toml
examples/demo/backend/router/src/: lib.rs
examples/demo/edge/native/: admission.cpp  policy.cpp
examples/demo/frontend/app/api/orders/: route.ts
examples/demo/frontend/app/api/users/: route.ts
examples/demo/frontend/app/users/: page.tsx
examples/demo/frontend/lib/: db.ts  orderState.ts  status.js  userStatus.ts
examples/demo/logicchart-out/: logic-flow.json  logic-flow.md
examples/shop/: EXPECTED.md  logicchart.toml
examples/shop/backend/: orders_service.py  payments_service.py  users_service.py
examples/shop/backend/api/: orders_routes.py
examples/shop/frontend/: middleware.ts
examples/shop/frontend/app/account/: page.tsx
examples/shop/frontend/lib/: status.ts
examples/shop/logicchart-out/: logic-flow.json  logic-flow.md
frontend/src/: ViewerApp.tsx  flow-detail-layout.ts  flowchart-layout.ts  index.ts  logicchart-model.ts  mount.tsx  standalone.tsx  viewer-layout.ts  viewer-store.ts
frontend/tests/: certifexp-local.test.tsx  demo-payload.test.ts  logicchart-model.test.ts  mount.test.tsx  node-builtins.d.ts  standalone.test.tsx  viewer-app.test.tsx  viewer-layout.test.ts
logicchart-out/: logic-flow.json  logic-flow.md
schema/: logic-flow.schema.json
src/codedebrief/: cli.py  errors.py  mcp_server.py
src/codedebrief/render/: html.py  markdown.py
src/codedebrief/render/assets/: panels.js  styles.css
src/logicchart/: __init__.py  annotation_preview.py  annotations.py  artifacts.py  cli.py  config.py  diagnostics.py  diff.py  doctor.py  hooks.py  install.py  llm_enrich.py  mcp_server.py  model.py  quality.py  query.py  util.py  validation.py
src/logicchart/analysis/: common.py  cross_flow.py  detectors.py  discovery.py  project.py  python.py  registry.py  treesitter.py  typescript.py
src/logicchart/analysis/languages/: cpp.py  java.py  terraform.py
src/logicchart/render/: html.py  markdown.py  payload.py  snapshot.py
src/logicchart/render/assets/: canvas.js  panels.js  shell.js  styles.css  tree.js
tests/: test_annotation_preview.py  test_annotations.py  test_artifacts_query_install.py  test_c_rust.py  test_call_resolver.py  test_cli.py  test_cross_flow_detectors.py  test_cross_flow_foundation.py  test_csharp_php.py  test_demo_golden.py  test_diagnostics.py  test_discovery.py  test_domain_modeling.py  test_go.py  test_ir_foundation.py  test_is_test_classification.py  test_java.py  test_javascript.py  test_llm_enrich.py  test_markdown_render.py  test_match_dispatch.py  test_mcp.py  test_python_analyzer.py  test_quality.py  test_query.py  test_query_consumption.py  test_query_ranking.py  test_registry.py  test_render_html.py  test_review_precision.py  test_robustness.py  test_ruby.py  test_semantic_precision.py  test_shop_golden.py  test_snapshots.py  test_terraform.py  test_typescript_analyzer.py
