[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "logicchart"
version = "0.8.0"
description = "Local-first static analyzer that turns code into navigable decision flowcharts for humans and coding agents. Deterministic, 11 languages, no API key."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Ferdinando Bonsegna" },
]
keywords = [
  "static-analysis",
  "flowchart",
  "decision-tree",
  "mcp",
  "python",
  "typescript",
  "cpp",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "tomli>=2.0; python_version < '3.11'",
  "jsonschema>=4.23",
  "mcp>=1.27,<2",
  "tree-sitter>=0.25.2,<0.26",
  "tree-sitter-c>=0.23,<0.24",
  "tree-sitter-cpp>=0.23,<0.24",
  "tree-sitter-c-sharp>=0.23,<0.24",
  "tree-sitter-go>=0.23,<0.24",
  "tree-sitter-java>=0.23,<0.24",
  "tree-sitter-php>=0.23,<0.24",
  "tree-sitter-ruby>=0.23,<0.24",
  "tree-sitter-rust>=0.23,<0.24",
  "tree-sitter-typescript>=0.23.2,<0.24",
]

[project.urls]
Homepage = "https://github.com/ferdinandobons/LogicChart"
Documentation = "https://github.com/ferdinandobons/LogicChart#readme"
Issues = "https://github.com/ferdinandobons/LogicChart/issues"
Source = "https://github.com/ferdinandobons/LogicChart"

[project.optional-dependencies]
# Compatibility alias for older install snippets such as `logicchart[mcp]`.
# MCP is part of the default runtime because it is the primary agent surface.
mcp = []
dev = [
  "mypy>=1.15",
  "pytest>=8.3",
  "pytest-cov>=6",
  "ruff>=0.11",
  # Installed unconditionally so mypy (pinned to target py3.10) can resolve the
  # `import tomli` fallback branch even when type-checking on Python >= 3.11.
  "tomli>=2.0",
]

[project.scripts]
logicchart = "logicchart.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/logicchart"]

[tool.hatch.build.targets.wheel.force-include]
"schema/logic-flow.schema.json" = "logicchart/schema/logic-flow.schema.json"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/frontend",
  "/schema",
  "/package.json",
  "/package-lock.json",
  "/README.md",
  "/LICENSE",
  "/CHANGELOG.md",
  "/CODE_OF_CONDUCT.md",
  "/CONTRIBUTING.md",
  "/SECURITY.md",
]

[tool.ruff]
target-version = "py310"
line-length = 100
# Example corpora are fixtures with intentional logical defects and calls into a
# host application's externals; they are analyzed by LogicChart, not linted.
extend-exclude = ["examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/logicchart/render/html.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["logicchart"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["logicchart"]

[tool.coverage.report]
show_missing = true
skip_covered = true
