[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "codedebrief"
version = "0.15.0"
description = "Visual code workflow explorer for coding agents. Builds deterministic, source-grounded Mermaid flowcharts via MCP, local-first, with no API key."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Ferdinando Bonsegna" },
]
keywords = [
  "static-analysis",
  "source-code-analysis",
  "code-comprehension",
  "code-navigation",
  "flowchart",
  "mermaid",
  "workflow",
  "mcp",
  "model-context-protocol",
  "mcp-server",
  "coding-agents",
  "ai-agents",
  "developer-tools",
  "local-first",
  "visualization",
  "python",
  "typescript",
  "javascript",
  "tree-sitter",
  "cpp",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "tomli>=2.0; python_version < '3.11'",
  "jsonschema>=4.23",
  "mcp>=1.27,<2",
  "tree-sitter>=0.25.2,<0.26",
  "tree-sitter-c>=0.23,<0.24",
  "tree-sitter-cpp>=0.23,<0.24",
  "tree-sitter-c-sharp>=0.23,<0.24",
  "tree-sitter-go>=0.23,<0.24",
  "tree-sitter-java>=0.23,<0.24",
  "tree-sitter-php>=0.23,<0.24",
  "tree-sitter-ruby>=0.23,<0.24",
  "tree-sitter-rust>=0.23,<0.24",
  "tree-sitter-typescript>=0.23.2,<0.24",
]

[project.urls]
Homepage = "https://ferdinandobons.github.io/CodeDebrief/"
Documentation = "https://github.com/ferdinandobons/CodeDebrief#readme"
Issues = "https://github.com/ferdinandobons/CodeDebrief/issues"
Source = "https://github.com/ferdinandobons/CodeDebrief"

[project.optional-dependencies]
# Compatibility alias for older install snippets such as `codedebrief[mcp]`.
# MCP is part of the default runtime because it is the primary agent surface.
mcp = []
dev = [
  "mypy>=1.15",
  "pytest>=8.3",
  "pytest-cov>=6",
  "ruff>=0.11",
  # Installed unconditionally so mypy (pinned to target py3.10) can resolve the
  # `import tomli` fallback branch even when type-checking on Python >= 3.11.
  "tomli>=2.0",
]

[project.scripts]
codedebrief = "codedebrief.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codedebrief"]

[tool.hatch.build.targets.wheel.force-include]
"schema/codedebrief.schema.json" = "codedebrief/schema/codedebrief.schema.json"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/frontend",
  "/schema",
  "/package.json",
  "/package-lock.json",
  "/README.md",
  "/LICENSE",
  "/CHANGELOG.md",
  "/CODE_OF_CONDUCT.md",
  "/CONTRIBUTING.md",
  "/SECURITY.md",
]

[tool.ruff]
target-version = "py310"
line-length = 100
# Local examples/fixtures are ignored and may contain host-application externals; do not
# lint them as part of the package.
extend-exclude = ["examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/codedebrief/render/html.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["codedebrief"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["codedebrief"]

[tool.coverage.report]
show_missing = true
skip_covered = true
